<resources>
    <string name="app_name">Project One</string>
    <string name="simply_irresistible">Simply Irresistible!</string>
    <string name="cakes_pastries_and_many_more_sugary_treats_at_their_best">Cakes,pastries and many more sugary treats at their best</string>
    <string name="cakes_n_bakes">Cakes N\' Bakes</string>
    <string name="brown_plaza_chennai">Brown Plaza,Chennai</string>
    <string name="phone_044_278675">Phone:(044)278675</string>
</resources>
